fixed overlap if d3 body copy was missing on mobile

--- a/src/packages/modules/primary-tout-p1-d7/css/primary-tout-p1-d7.scss
+++ b/src/packages/modules/primary-tout-p1-d7/css/primary-tout-p1-d7.scss
@@ -238,9 +238,7 @@
       h1{
         margin-bottom:15px;
       }
-      .p3{
-        margin-bottom:42px;
-      }
+
       a{
         display:block;
         margin-bottom:4px;
